# syndre

./: AUTHORS  Makefile.am  README.md  configure.ac  version.mk
.github/workflows/: build-sdl1.yaml  build.yaml
bflibrary/include/: bftext.h  poly.h  poly_gp.h
bflibrary/src/general/: gline.c  gtext.c  poly_gp.c  spr_scl.c  spr_ssta.c
bflibrary/tests/: bflib_test_poly.c  bflib_test_potrig.c
bfsoundlib/: configure.ac
bfsoundlib/include/: aildebug.h  ailss.h  awe32.h  bfaudio.h  bfmusic.h  bfsound.h  dllload.h  drv_oal.h  mssal.h  ssampply.h
bfsoundlib/src/: ail.c  aildebug.c  ailss.c  ailvoc.c  ailwav.c  awe32.c  awe32use.c  bfaudio.c  cd.c  dllload.c  drv_oal.c  init_mus.c  init_snd.c  miscutil.c  mseqnlst.c  mseqnply.c  mssdig.c  mssxdig.c  mssxmidi.c  oggvorbis.c  ssampfad.c  ssamplst.c  ssampply.c  streamfx.c
conf/: midipats.cfg  wrappers_dos.conf  wrappers_game.conf  wrappers_libc.conf
conf/Tone_000/: 008_Celesta.pat  012_Marimba.pat  013_Xylophone.pat  026_Electric_Jazz_Guitar.pat  032_BassLead.pat  041_Viola.pat  093_Metal_Pad.pat  096_Tubular_Bells.pat  100_Brightness.pat  103_Star_Theme.pat  125_5th_Saw_Wave.pat
lang/: Makefile.am  guitext_eng.pot  guitext_fre.po  guitext_ita.po
res/: bfgame_stdres.rc  syndicatfx_stdres.rc  syndre_stdres.rc
src/: Makefile.am  Makefile.windows  applog.h  bfgame.S  bfgame_ver.h  bflib_basics.c  bflib_dernc.c  bflib_fileio.c  bflib_keybrd.h  bflib_memory.h  bflib_mouse.c  bflib_mouse.h  bflib_render.c  bflib_render.h  bflib_render_trig.c  bflib_sprite.c  bflib_sprite.h  config.h.in  display.c  display.h  dos.c  dos.h  game.c  game.h  game_bstype.h  game_data.c  game_data.h  guitext.c  guitext.h  keyboard.c  keyboard.h  main.c  memory.c  mouse.c  mouse.h  oggvorbis.c  osunix.c  osunix.h  oswindws.c  oswindws.h  (+23 more)
util/: install  mkbundle
